Clear Git Cache

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <header class="main-header">
     <div class="logo-container">
-      <img src="./Optimum oficial-20250112T020850Z-001/Optimum oficial/Logo1.png" alt="logo" class="logo" />
+      <img src="./Optimum-oficial-20250112T020850Z-001/Optimum oficial/Logo1.png" alt="logo" class="logo" />
     </div>
     <nav class="navbar">
       <ul class="nav-links">
@@ -27,7 +27,7 @@
   <section class="about-section">
     <h2>Optimum Dance Cover</h2>
     <div class="about-image">
-      <img src="./Optimum oficial-20250112T020850Z-001/Optimum oficial/1.1.png" alt="foto de Optimum" />
+      <img src="./Optimum-oficial-20250112T020850Z-001/Optimum oficial/1.1.png" alt="foto de Optimum" />
     </div>
     <p>
       Optimum es un grupo con 10 años de experiencia en el Dance Cover, representaron a México en Corea del Sur con su equipo en el Stage K.
@@ -83,15 +83,15 @@
   <section id="galeria" class="galeria-section">
     <h2>Galería</h2>
     <div class="galeria-grid">
-      <img src="./Optimum oficial-20250112T020850Z-001/Optimum oficial/1.jpg" alt="Optimum en evento 1">
-      <img src="./Optimum oficial-20250112T020850Z-001/Optimum oficial/2.jpg" alt="Optimum en evento 2">
-      <img src="./Optimum oficial-20250112T020850Z-001/Optimum oficial/3.jpg" alt="Optimum en práctica">
-      <img src="./Optimum oficial-20250112T020850Z-001/Optimum oficial/4.jpg" alt="Foto grupal">
-      <img src="./Optimum oficial-20250112T020850Z-001/Optimum oficial/5.png" alt="Backstage">
-      <img src="./Optimum oficial-20250112T020850Z-001/Optimum oficial/6.png" alt="Momentos especiales">
-      <img src="./Optimum oficial-20250112T020850Z-001/Optimum oficial/8.jpg" alt="Momentos especiales">
-      <img src="./Optimum oficial-20250112T020850Z-001/Optimum oficial/10(1).jpg" alt="Momentos especiales">
-      <img src="./Optimum oficial-20250112T020850Z-001/Optimum oficial/11(1).jpg" alt="Momentos especiales">
+      <img src="./Optimum-oficial-20250112T020850Z-001/Optimum oficial/1.jpg" alt="Optimum en evento 1">
+      <img src="./Optimum-oficial-20250112T020850Z-001/Optimum oficial/2.jpg" alt="Optimum en evento 2">
+      <img src="./Optimum-oficial-20250112T020850Z-001/Optimum oficial/3.jpg" alt="Optimum en práctica">
+      <img src="./Optimum-oficial-20250112T020850Z-001/Optimum oficial/4.jpg" alt="Foto grupal">
+      <img src="./Optimum-oficial-20250112T020850Z-001/Optimum oficial/5.png" alt="Backstage">
+      <img src="./Optimum-oficial-20250112T020850Z-001/Optimum oficial/6.png" alt="Momentos especiales">
+      <img src="./Optimum-oficial-20250112T020850Z-001/Optimum oficial/8.jpg" alt="Momentos especiales">
+      <img src="./Optimum-oficial-20250112T020850Z-001/Optimum oficial/10(1).jpg" alt="Momentos especiales">
+      <img src="./Optimum-oficial-20250112T020850Z-001/Optimum oficial/11(1).jpg" alt="Momentos especiales">
     </div>
 
     <!-- Lightbox -->
@@ -107,12 +107,12 @@
     <div class="video-carousel-container">
       <div class="carousel-3d-wrapper">
         <div class="video-carousel carousel-3d">
-          <div class="video-card"><video src="./Optimum oficial-20250112T020850Z-001/Optimum oficial/videos/AESPA 에스파 'Drama' DANCE COVER MEXICO by OPTIMUM.mp4" controls muted></video></div>
-          <div class="video-card"><video src="./Optimum oficial-20250112T020850Z-001/Optimum oficial/videos/KISS OF LIFE (키스오브라이프) 'Midas Touch' by OPTIMUM.mp4" controls muted></video></div>
-          <div class="video-card"><video src="./Optimum oficial-20250112T020850Z-001/Optimum oficial/videos/KISS OF LIFE (키스오브라이프) 'Sticky' _ DANCE COVER _ OPTIMUM FROM MEXICO.mp4" controls muted></video></div>
-          <div class="video-card"><video src="./Optimum oficial-20250112T020850Z-001/Optimum oficial/videos/MISS A [GOOD GIRL, BAD GIRL + HUSH] DANCE COVER by OPTIMUM MEXICO.mp4" controls muted></video></div>
-          <div class="video-card"><video src="./Optimum oficial-20250112T020850Z-001/Optimum oficial/videos/Xikers(싸이커스) - 'Koong' -  Mexico Dance Cover by Optimum.mp4" controls muted></video></div>
-          <div class="video-card"><video src="./Optimum oficial-20250112T020850Z-001/Optimum oficial/videos/MCND 'ICE AGE'   Dance Cover by Optimum.mp4" controls muted></video></div>
+          <div class="video-card"><video src="./Optimum-oficial-20250112T020850Z-001/Optimum oficial/videos/AESPA 에스파 'Drama' DANCE COVER MEXICO by OPTIMUM.mp4" controls muted></video></div>
+          <div class="video-card"><video src="./Optimum-oficial-20250112T020850Z-001/Optimum oficial/videos/KISS OF LIFE (키스오브라이프) 'Midas Touch' by OPTIMUM.mp4" controls muted></video></div>
+          <div class="video-card"><video src="./Optimum-oficial-20250112T020850Z-001/Optimum oficial/videos/KISS OF LIFE (키스오브라이프) 'Sticky' _ DANCE COVER _ OPTIMUM FROM MEXICO.mp4" controls muted></video></div>
+          <div class="video-card"><video src="./Optimum-oficial-20250112T020850Z-001/Optimum oficial/videos/MISS A [GOOD GIRL, BAD GIRL + HUSH] DANCE COVER by OPTIMUM MEXICO.mp4" controls muted></video></div>
+          <div class="video-card"><video src="./Optimum-oficial-20250112T020850Z-001/Optimum oficial/videos/Xikers(싸이커스) - 'Koong' -  Mexico Dance Cover by Optimum.mp4" controls muted></video></div>
+          <div class="video-card"><video src="./Optimum-oficial-20250112T020850Z-001/Optimum oficial/videos/MCND 'ICE AGE'   Dance Cover by Optimum.mp4" controls muted></video></div>
         </div>
       </div>
 
