--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&family=Poppins:wght@300;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-
 </head>
 <body>
   <header class="main-header">
@@ -129,33 +128,33 @@
       <video id="lightbox-video" controls autoplay></video>
     </div>
   </section>
-  <!-- Sección de Contacto -->
-<footer class="contact-footer" id="contact">
-  <div class="contact-container">
-    <h2>Contáctanos</h2>
-    <form action="https://formspree.io/f/xdkgdnqw" method="POST" class="contact-form">
-      <input type="text" name="name" placeholder="Nombre" required>
-      <input type="email" name="email" placeholder="Correo electrónico" required>
-      <textarea name="message" rows="4" placeholder="Escribe tu mensaje..." required></textarea>
-      <button type="submit">Enviar</button>
-    </form>
-    <div class="social-icons">
-      <a href="https://www.instagram.com/optimum_dc/" target="_blank" aria-label="Instagram">
-        <i class="fab fa-instagram"></i>
-      </a>
-      <a href="https://www.tiktok.com/@optimum_dc?lang=es-419" target="_blank" aria-label="TikTok">
-        <i class="fab fa-tiktok"></i>
-      </a>
-      <a href="https://wa.me/4421131525" target="_blank" aria-label="WhatsApp">
-        <i class="fab fa-whatsapp"></i>
-      </a>
-      <a href="https://www.youtube.com/@optimum_dc" target="_blank" aria-label="YouTube">
-        <i class="fab fa-youtube"></i>
-      </a>      
-    </div>
-  </div>
-</footer>
 
+  <!-- Sección de Contacto -->
+  <footer class="contact-footer" id="contacto">
+    <div class="contact-container">
+      <h2>Contáctanos</h2>
+      <form action="https://formspree.io/f/xdkgdnqw" method="POST" class="contact-form">
+        <input type="text" name="name" placeholder="Nombre" required>
+        <input type="email" name="email" placeholder="Correo electrónico" required>
+        <textarea name="message" rows="4" placeholder="Escribe tu mensaje..." required></textarea>
+        <button type="submit">Enviar</button>
+      </form>
+      <div class="social-icons">
+        <a href="https://www.instagram.com/optimum_dc/" target="_blank" aria-label="Instagram">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://www.tiktok.com/@optimum_dc?lang=es-419" target="_blank" aria-label="TikTok">
+          <i class="fab fa-tiktok"></i>
+        </a>
+        <a href="https://wa.me/4421131525" target="_blank" aria-label="WhatsApp">
+          <i class="fab fa-whatsapp"></i>
+        </a>
+        <a href="https://www.youtube.com/@optimum_dc" target="_blank" aria-label="YouTube">
+          <i class="fab fa-youtube"></i>
+        </a>      
+      </div>
+    </div>
+  </footer>
 
   <!-- Scripts -->
   <script src="index.js"></script>
