--- a/index.html
+++ b/index.html
@@ -10,18 +10,21 @@
 </head>
 <body>
   <header class="main-header">
-    <div class="logo-container">
-      <img src="./Logo1.png" alt="logo" class="logo" />
+  <div class="logo-container">
+    <img src="./Logo1.png" alt="logo" class="logo" />
+  </div>
+  <nav class="navbar">
+    <ul class="nav-links">
+      <li><a href="#miembros">Miembros</a></li>
+      <li><a href="#galeria">Galería</a></li>
+      <li><a href="#videos">Videos</a></li>
+      <li><a href="#contacto">Contacto</a></li>
+    </ul>
+    <div class="hamburger" id="hamburger">
+      <i class="fas fa-bars"></i>
     </div>
-    <nav class="navbar">
-      <ul class="nav-links">
-        <li><a href="#miembros">Miembros</a></li>
-        <li><a href="#galeria">Galería</a></li>
-        <li><a href="#videos">Videos</a></li>
-        <li><a href="#contacto">Contacto</a></li>
-      </ul>
-    </nav>
-  </header>
+  </nav>
+</header>
 
   <section class="about-section">
     <h2>Optimum Dance Cover</h2>
